--- a/inventory/templates/inventory/login.html
+++ b/inventory/templates/inventory/login.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <style>
+
     .login-container {
         min-height: 70vh;
         display: flex;
@@ -19,6 +20,22 @@
         box-shadow: 0 25px 50px rgba(0,0,0,0.3);
         color: #333;
     }
+    .login-card::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 6px;
+    background: linear-gradient(
+        90deg,
+        #007aff,
+        #4da3ff,
+        #007aff
+    );
+    border-radius: 20px 20px 0 0;
+    box-shadow: 0 0 12px rgba(0, 122, 255, 0.8);
+}
     /* Cibler les inputs générés par Django pour qu'ils soient beaux */
     .login-card input {
         width: 100%;
