--- a/inventory/templates/inventory/register.html
+++ b/inventory/templates/inventory/register.html
@@ -9,6 +9,22 @@
         justify-content: center;
         padding: 20px;
     }
+    .register-card::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 6px;
+    background: linear-gradient(
+        90deg,
+        #007aff,
+        #4da3ff,
+        #007aff
+    );
+    border-radius: 20px 20px 0 0;
+    box-shadow: 0 0 12px rgba(0, 122, 255, 0.8);
+    }
     .register-card {
         background: rgba(255, 255, 255, 0.95);
         border-radius: 20px;
@@ -17,6 +33,7 @@
         max-width: 500px;
         box-shadow: 0 15px 35px rgba(0,0,0,0.2);
         color: #333;
+        position : relative;
     }
     /* Styliser les inputs de Django */
     .register-card input {
@@ -34,7 +51,7 @@
         margin-bottom: 15px;
     }
     .btn-register {
-        background: #28a745;
+        background: #007aff;
         border: none;
         border-radius: 10px;
         padding: 12px;
